--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
-       android:layout_gravity="center"/>
+       android:gravity="center"
+       android:layout_marginTop="50dp"/>
 
 </LinearLayout>
